# QuickCache

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
benchmarks/: benchmark_client.cpp  benchmark_client.py  concurrency_client.py
benchmarks/workloads/: inventory_holds.txt  ticket_queue.txt  verification_codes.txt
include/: cache.h  parser.h  persistence.h  server.h  stats.h
src/: cache.cpp  main.cpp  parser.cpp  persistence.cpp  server.cpp  stats.cpp
tests/: cache_test.cpp  parser_test.cpp  persistence_test.cpp  stats_test.cpp
